# RType

./: .clang-format  .gitignore  Actions.cpp  Actions.hpp  CMakeLists.txt  CONTRIBUTING.md  Chrono.hpp  DebianDockerfile  DebianExecuteBinaryDockerfile  FedoraDockerfile  FedoraExecuteBinaryDockerfile  GameEngine.cpp  GameEngine.hpp  Keys.cpp  Keys.hpp  Main.cpp  Makefile  README.md  UbuntuDockerfile  UbuntuExecuteBinaryDockerfile  build_and_fetch_binaries.sh  build_binary_archive.sh  build_config_editor.sh  build_plugins.sh  build_rtype.sh  clean_plugins.sh  clean_rtype.sh  flake.nix  formatter.clang-format  main.cpp  windows_build_plugins.bat  windows_build_rtype.bat  windows_clean_plugins.bat  windows_clean_rtype.bat
client/: CMakeLists.txt  apt_sfml_dep.sh
client/include/: DLLoader.hpp
configEditor/: CMakeLists.txt  Gui.cpp  Gui.hpp  Main.cpp  gui_window_file_dialog.h
debug_server/: CMakeLists.txt  Main.cpp  UDPServer.cpp  UDPServer.hpp  udp_server
levelCreator/: .gitignore  AUI.cpp  AUIElement.hpp  CMakeLists.txt  Game.cpp  Game.hpp  IUI.hpp  LevelEditorScene.cpp  LevelEditorScene.hpp  LevelEditorUI.cpp  LevelEditorUI.hpp  Main.cpp  MainMenuUI.cpp  MainMenuUI.hpp  Makefile  UIButton.cpp  UIInputField.cpp  UIInputField.hpp  UISlider.cpp  UISlider.hpp  UISprite.cpp  Window.cpp  Window.hpp
plugins/: CMakeLists.txt  Components.hpp  Makefile  library_entrypoint.hpp
plugins/components/: AClientComponent.hpp  AComponent.hpp  AServerComponent.hpp  CMakeLists.txt  IClientComponent.hpp  IComponent.hpp  IServerComponent.hpp  Makefile
plugins/components/Ai/: Ai.cpp  Ai.hpp  CMakeLists.txt
plugins/components/acceleration/: Acceleration.cpp  Acceleration.hpp  CMakeLists.txt
plugins/components/action/: Action.cpp  Action.hpp  CMakeLists.txt
plugins/components/collider/: CMakeLists.txt  Collider.cpp  Collider.hpp  Makefile
plugins/components/collider3d/: CMakeLists.txt  Collider3d.cpp  Collider3d.hpp
plugins/components/controllable/: CMakeLists.txt  Controllable.cpp  Controllable.hpp
plugins/components/damage/: CMakeLists.txt  Damage.cpp  Damage.hpp
plugins/components/deathRange/: CMakeLists.txt  DeathRange.cpp  DeathRange.hpp
plugins/components/destruction/: CMakeLists.txt  Destruction.cpp  Destruction.hpp
plugins/components/gun/: CMakeLists.txt  Gun.cpp  Gun.hpp
plugins/components/health/: CMakeLists.txt  Health.cpp  Health.hpp  Makefile
plugins/components/marioType/: CMakeLists.txt  MarioType.cpp  MarioType.hpp
plugins/components/maxAcceleration/: CMakeLists.txt  MaxAcceleration.cpp  MaxAcceleration.hpp
plugins/components/modelId/: CMakeLists.txt  ModelId.cpp  ModelId.hpp
plugins/components/position/: CMakeLists.txt  Makefile  Position.cpp  Position.hpp
plugins/components/position3d/: CMakeLists.txt  Position3d.cpp  Position3d.hpp
plugins/components/rotation/: CMakeLists.txt  Rotation.cpp  Rotation.hpp
plugins/components/scale/: CMakeLists.txt  Scale.cpp  Scale.hpp
plugins/components/score/: CMakeLists.txt  Score.cpp  Score.hpp
plugins/components/sound/: CMakeLists.txt  Sound.cpp  Sound.hpp
plugins/components/sprite/: CMakeLists.txt  Makefile  Sprite.cpp  Sprite.hpp
plugins/components/spriteId/: CMakeLists.txt  SpriteID.cpp  SpriteID.hpp
plugins/components/text/: CMakeLists.txt  Text.cpp  Text.hpp
plugins/components/type/: CMakeLists.txt  Type.cpp  Type.hpp
plugins/components/velocity/: CMakeLists.txt  Makefile  Velocity.cpp  Velocity.hpp
plugins/components/velocity3d/: CMakeLists.txt  Velocity3d.cpp  Velocity3d.hpp
plugins/components/visible/: CMakeLists.txt  Makefile  Visible.cpp  Visible.hpp
plugins/systems/: AClientSystem.hpp  AServerSystem.hpp  ASystem.hpp  CMakeLists.txt  IClientSystem.hpp  IServerSystem.hpp  ISystem.hpp  Makefile
plugins/systems/Ai/: Ai.cpp  Ai.hpp  CMakeLists.txt
plugins/systems/Behavior/: Behavior.cpp  Behavior.hpp
plugins/systems/attack/: Attack.cpp  Attack.hpp  CMakeLists.txt
plugins/systems/behavior/: Behavior.cpp  Behavior.hpp  CMakeLists.txt
plugins/systems/collision/: CMakeLists.txt  Collision.cpp  Collision.hpp
plugins/systems/collision3d/: CMakeLists.txt  Collision3d.cpp  Collision3d.hpp
plugins/systems/config/: CMakeLists.txt  Config.cpp  Config.hpp  Makefile
plugins/systems/input/: Actions.cpp  Actions.hpp  CMakeLists.txt  Input.cpp  Input.hpp  Keys.hpp
plugins/systems/inputRaylib/: CMakeLists.txt  InputRaylib.cpp  InputRaylib.hpp
plugins/systems/leafBlowerCollisionSystem/: CMakeLists.txt  Collision.cpp  Collision.hpp
plugins/systems/leafBlowerDisplaySystem/: CMakeLists.txt  Display.cpp  Display.hpp
plugins/systems/leafBlowerMoveSystem/: CMakeLists.txt  Move.cpp  Move.hpp
plugins/systems/leafBlowerSpawnSystem/: CMakeLists.txt  Spawn.cpp  Spawn.hpp
plugins/systems/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
server/: CMakeLists.txt  Main.cpp  Untitled-1.cpp
server/include/: DLLoader.hpp  IDLLoader.hpp
src/: CMakeLists.txt  Main.cpp  Makefile  Output.cpp  Output.hpp
src/DLLoader/: DLLoader.cpp  DLLoader.hpp
src/Engine/: AEngine.hpp  ClientEngine.cpp  ClientEngine.hpp  IEngine.hpp  ServerEngine.cpp  ServerEngine.hpp
src/GameEngine/: ComponentsGetter.hpp  GameEngine.cpp  GameEngine.hpp
src/Network/: UDPConnection.cpp  udp_client.cpp
src/client/: AUI.hpp  CMakeLists.txt  Game.cpp  IUIElement.hpp  LevelEditorScene.cpp  LevelEditorScene.hpp  LevelEditorUI.cpp  LevelEditorUI.hpp  Main.cpp  MainMenuUI.cpp  MainMenuUI.hpp  UIButton.cpp  UIButton.hpp  UIInputField.cpp  UISlider.cpp  UISprite.hpp  Window.cpp  Window.hpp  configClient.cfg
src/network/: CMakeLists.txt  RTypeClient.cpp  RTypeClient.hpp  UDPConnection.cpp  UDPConnection.hpp  UDPServer.cpp  UDPServer.hpp  udp_client.cpp
src/server/: CMakeLists.txt  Main.cpp  configServer.cfg
src/utils/: Actions.cpp  Actions.hpp  Chrono.hpp  ComponentUtils.hpp  ConfigStruct.hpp  EntityActions.cpp  EntityActions.hpp  Keys.hpp  MinMax.hpp  Projectile.cpp  Projectile.hpp
tests/: .gitignore  CMakeLists.txt  Main.cpp  Makefile  Zipper  Zipper_tests.cpp  indexed_zipper_tests.cpp  oneBin.mk  zipper_tests.cpp
(+420 files in other folders)
